[package]
name = "bevy-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
rand = "0.8.5"
bevy_rapier3d = "0.25.0"
bevy-inspector-egui = "0.23.4"
bevy_voxel_world = "0.5.1"
noise = "0.9.0"
bevy-fps-counter = "0.4.0"

[patch.crates-io]
bevy_voxel_world = { git = "https://github.com/aligator/bevy_voxel_world", branch = "experiments" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3